Regression: NLA crash when reordering tracks if no object is selected #96624

Closed
opened 2022-03-19 02:05:09 +01:00 by Mark Stead · 8 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.09

Blender Version
Broken: version: master, 3.1.0, 3.0, 2.93 LTS, and 2.92
Worked: version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: 5be9ef4177

Short description of error
The NLA will crash when you reorder tracks if no object is selected. (An easy way to make sure that nothing is selected is to create then delete an object.)

Exact steps for others to reproduce the error
I've attached a blend file. NLA crash when reordering tracks if no object is selected.blend
Simply reorder the tracks (any reordering operation) and it should crash.

It doesn't appear to make any difference what the animated object is (e.g. simple mesh or armature), whether there are any actions on the strip.
It will even crash if there is only one NLA strip, or even if there are zero strips (i.e. you delete all strips).
I'm using the default configuration Only Show Selected is off. (Obviously if it was on, and I had deselected then nothing would show in the NLA.)
The key to making it crash is that nothing can be selected.

This is how the Blend file was created:

  • Add location keyframe to the cube
  • Push down the current action (CubeAction) into an NLA strip (NlaTrack)
  • Use Shift+A to add another Strip (NlaTrack.001)
  • Select the light and delete. (This is just a way to deselect the current object - just using Alt+A is not sufficient.)
  • Select the bottom strip (NlaTrack)
  • Right click and choose Track Ordering - Up (or use use Page Up).
  • (crash)

This appears to be the same bug that was reported in https://developer.blender.org/T95646 (against 3.0).

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.09 **Blender Version** Broken: version: master, 3.1.0, 3.0, 2.93 LTS, and 2.92 Worked: version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: `5be9ef4177` **Short description of error** The NLA will crash when you reorder tracks if no object is selected. (An easy way to make sure that nothing is selected is to create then delete an object.) **Exact steps for others to reproduce the error** I've attached a blend file. [NLA crash when reordering tracks if no object is selected.blend](https://archive.blender.org/developer/F12933854/NLA_crash_when_reordering_tracks_if_no_object_is_selected.blend) Simply reorder the tracks (any reordering operation) and it should crash. It doesn't appear to make any difference what the animated object is (e.g. simple mesh or armature), whether there are any actions on the strip. It will even crash if there is only one NLA strip, or even if there are zero strips (i.e. you delete all strips). I'm using the default configuration Only Show Selected is off. (Obviously if it was on, and I had deselected then nothing would show in the NLA.) The key to making it crash is that nothing can be selected. This is how the Blend file was created: - Add location keyframe to the cube - Push down the current action (CubeAction) into an NLA strip (NlaTrack) - Use Shift+A to add another Strip (NlaTrack.001) - Select the light and delete. (This is just a way to deselect the current object - just using Alt+A is not sufficient.) - Select the bottom strip (NlaTrack) - Right click and choose Track Ordering - Up (or use use Page Up). - (crash) This appears to be the same bug that was reported in https://developer.blender.org/T95646 (against 3.0).
Author

Added subscriber: @MarkStead-2

Added subscriber: @MarkStead-2
Author

In rearrange_nla_channels() ac->obact is NULL.

const bool is_liboverride = ID_IS_OVERRIDE_LIBRARY(ac->obact);
In `rearrange_nla_channels()` ac->obact is NULL. ``` const bool is_liboverride = ID_IS_OVERRIDE_LIBRARY(ac->obact); ```
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Pratik Borhade changed title from NLA crash when reordering tracks if no object is selected to Regression: NLA crash when reordering tracks if no object is selected 2022-03-21 07:06:14 +01:00
Pratik Borhade self-assigned this 2022-03-21 07:07:42 +01:00

This issue was referenced by 69cea4fce1

This issue was referenced by 69cea4fce15fa4542b62a21d26987e14bd733744

This issue was referenced by 960783a21a

This issue was referenced by 960783a21ac89edf1516276099cbb883cbc120c0

This issue was referenced by 913b6b9ec1

This issue was referenced by 913b6b9ec1b1f3cf83b21956b06e2f6d3341c78c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96624
No description provided.